# NeaTS

./: CMakeLists.txt  main.cpp
cmake/: NeaTSConfig.cmake.in
include/: NeaTS.hpp
